feat: add database environment variable for maven build
Added environment variable for database URL in build step.

--- a/.github/workflows/production_bibflip-api-platform.yml
+++ b/.github/workflows/production_bibflip-api-platform.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        env:
+          DB_CLOUD_URL: ${{ secrets.DB_CLOUD_URL }}          
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -60,4 +62,5 @@ jobs:
           app-name: 'bibflip-api-platform'
           slot-name: 'Production'
           package: '*.jar'
+
           
